WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248421
REGRESSION (
255903@main
): iWork/Numbers/Pages Keynote attachments appear upside down
https://bugs.webkit.org/show_bug.cgi?id=248421
Summary
REGRESSION (255903@main): iWork/Numbers/Pages Keynote attachments appear upsi...
Nikos Mouchtaris
Reported
2022-11-28 13:44:26 PST
Revert
255903@main
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2022-11-28 13:44:41 PST
<
rdar://problem/102052562
>
Nikos Mouchtaris
Comment 2
2022-11-28 13:51:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6882
EWS
Comment 3
2022-11-28 16:51:45 PST
Committed
257095@main
(f3dfd0cc716e): <
https://commits.webkit.org/257095@main
> Reviewed commits have been landed. Closing PR #6882 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug