Cherry-pick f3dfd0cc716e. rdar://problem/102052562

REGRESSION (255903@main): iWork/Numbers/Pages Keynote attachments appear upside down
    https://bugs.webkit.org/show_bug.cgi?id=248421
    <rdar://102052562>

    Unreviewed revert.

    Revert 255903@main.

    * LayoutTests/fast/attachment/mac/attachment-element-gpu-process-expected.html: Removed.
    * LayoutTests/fast/attachment/mac/attachment-element-gpu-process.html: Removed.
    * Source/WebCore/SourcesCocoa.txt:
    * Source/WebCore/WebCore.xcodeproj/project.pbxproj:
    * Source/WebCore/rendering/AttachmentLayout.h: Removed.
    * Source/WebCore/rendering/AttachmentLayout.mm: Removed.
    * Source/WebCore/rendering/RenderTheme.cpp:
    (WebCore::RenderTheme::paint):
    * Source/WebCore/rendering/RenderTheme.h:
    (WebCore::RenderTheme::paintAttachmentText): Deleted.
    * Source/WebCore/rendering/RenderThemeCocoa.h:
    * Source/WebCore/rendering/RenderThemeCocoa.mm:
    (WebCore::RenderThemeCocoa::attachmentBaseline const): Deleted.
    (WebCore::RenderThemeCocoa::paintAttachmentText): Deleted.
    * Source/WebCore/rendering/RenderThemeIOS.h:
    * Source/WebCore/rendering/RenderThemeIOS.mm:
    (WebCore::attachmentActionFont):
    (WebCore::attachmentActionColor):
    (WebCore::attachmentTitleFont):
    (WebCore::shortCaptionPointSizeWithContentSizeCategory):
    (WebCore::attachmentDynamicTypeScaleFactor):
    (WebCore::attachmentTitleColor):
    (WebCore::attachmentSubtitleFont):
    (WebCore::attachmentSubtitleColor):
    (WebCore::RenderAttachmentInfo::addLine):
    (WebCore::RenderAttachmentInfo::buildWrappedLines):
    (WebCore::RenderAttachmentInfo::buildSingleLine):
    (WebCore::getAttachmentProgress):
    (WebCore::RenderAttachmentInfo::RenderAttachmentInfo):
    (WebCore::RenderThemeIOS::attachmentBaseline const):
    (WebCore::paintAttachmentIcon):
    (WebCore::paintAttachmentText):
    (WebCore::paintAttachmentProgress):
    (WebCore::attachmentBorderPath):
    (WebCore::RenderThemeIOS::paintAttachment):
    * Source/WebCore/rendering/RenderThemeMac.h:
    * Source/WebCore/rendering/RenderThemeMac.mm:
    (WebCore::titleTextColorForAttachment):
    (WebCore::AttachmentLayout::addTitleLine):
    (WebCore::AttachmentLayout::layOutTitle):
    (WebCore::AttachmentLayout::layOutSubtitle):
    (WebCore::AttachmentLayout::AttachmentLayout):
    (WebCore::RenderThemeMac::attachmentBaseline const):
    (WebCore::paintAttachmentIcon):
    (WebCore::paintAttachmentTitle):
    (WebCore::paintAttachmentSubtitle):
    (WebCore::RenderThemeMac::paintAttachment):

    Canonical link: https://commits.webkit.org/257095@main

Canonical link: https://commits.webkit.org/257041.3@safari-7615.1.13-branch