Source/WebCore/rendering/RenderTheme.h
@@ -32,7 +32,6 @@
 
 namespace WebCore {
 
-struct AttachmentLayout;
 class BorderData;
 class Element;
 class FileList;
@@ -333,7 +332,6 @@ protected:
 
 #if ENABLE(ATTACHMENT_ELEMENT)
     virtual bool paintAttachment(const RenderObject&, const PaintInfo&, const IntRect&);
-    virtual void paintAttachmentText(GraphicsContext&, AttachmentLayout*) { }
 #endif
 
 #if ENABLE(DATALIST_ELEMENT)
